Css fix for the jump to doc form.

--- a/src/fauxton/assets/less/fauxton.less
+++ b/src/fauxton/assets/less/fauxton.less
@@ -971,10 +971,9 @@ div.spinner {
 }
 
 #jump-to-doc {
-  width: 88%;
-  max-width: 600px;
-  float:right;
-  margin-right: 40px;
+  max-width: 300px;
+  position: absolute;
+  right: 15px;
 
   #jump-to-doc-label {
     width: 100%;
